--- a/Styling/main-styling.css
+++ b/Styling/main-styling.css
@@ -10,15 +10,19 @@
     margin:0;
     padding: 0;
     font-family: 'Edu VIC WA NT Beginner', cursive;
+    font-size: 20px;
 }
 
+h1{
+    font-size: 30px;
+}
 header{
     background-color: #E1CA96;
+    border-style: solid;
+    border-color: #918B76;
 }
 main{
     background-color: #ACA885;
-    border-style: solid;
-    border-color: #918B76;
 }
 
 .header-links{
@@ -32,5 +36,5 @@ main{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-basis: 200px;
+    flex-basis: 300px;
 }
