--- a/styling/main-styling.css
+++ b/styling/main-styling.css
@@ -1,9 +1,3 @@
-/*color to us*/
-/*color Wheat #E1CA96*/
-/*color Sage #ACA885*/
-/*color middle gray #918B76*/
-/*color nikkel #626C66*/
-/*color black olive #434A42*/
 
 *{
     box-sizing: border-box;
@@ -23,17 +17,6 @@ header{
 }
 main{
     background-color: #ACA885;
-
-
-
-
-}
-
-.layout{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 .header-links{
@@ -50,18 +33,13 @@ main{
     flex-basis: 300px;
 }
 
-ul{
+.map-thumnail ul{
     list-style: none;
-}
-
-.layout ul{
     display: flex;
-    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
 }
-img{
-    height: 300px;
-}
-
 
 .phandalin {
     background-image: url('../assets/maps/phandalin.jpg');
@@ -81,27 +59,31 @@ img{
 }
 
 .map {
-    height: 200px;
-    width: 300px;
+    height:400px;
+    width: 500px;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 
 .pawn  {
-    height: 50px;
-    width: 50px;
+    /*plaatsing pawns*/
     top: 40px;
     left: 40px;
     position: absolute;
+    /*opmaak pawns*/
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     box-shadow: 5px 5px 5px gray;
 }
 .player1 {
     background-color: red;
+    /*background-image: url("../assets/backgrounds/chess-pawn-piece-free-vector.png");*/
+    /*background-size: cover;*/
 }
 .player2 {
-    background-color: yellow;
+    background-color:yellow;
 }
 .player3 {
     background-color: blue;
@@ -113,11 +95,13 @@ img{
     background-color: purple;
 }
 .close {
-    height: 20px;
-    width: 20px;
-    /*position:relative;*/
-    background-color: yellow;
+    background-image: url("../assets/backgrounds/close_FILL0_wght400_GRAD0_opsz48.png");
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-position: center;
+    background-color: white;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 1em;
+    right: 1em;
 }
